<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  tools:parentTag="android.widget.FrameLayout"
  >

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal"
    >

    <TextView
      android:id="@+id/viewRemoveTraktHistoryText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="3"
      android:text="@string/textRemoveFromTrakt"
      android:textAllCaps="true"
      android:textColor="?attr/colorAccent"
      android:textStyle="bold"
      />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/viewRemoveTraktHistoryNoButton"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/spaceSmall"
      android:layout_weight="1"
      android:gravity="center"
      android:maxLines="1"
      android:padding="0dp"
      android:text="@string/textNo"
      android:textColor="?android:attr/textColorSecondary"
      app:rippleColor="?android:attr/textColorSecondary"
      app:strokeWidth="0dp"
      />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/viewRemoveTraktHistoryYesButton"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/spaceSmall"
      android:layout_weight="1"
      android:gravity="center"
      android:maxLines="1"
      android:padding="0dp"
      android:text="@string/textYes"
      android:textColor="?attr/colorAccent"
      app:rippleColor="?attr/colorAccent"
      app:strokeWidth="0dp"
      />

  </LinearLayout>

  <ProgressBar
    android:id="@+id/viewRemoveTraktHistoryProgress"
    style="@style/ProgressBar.Dark"
    android:layout_width="30dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="gone"
    tools:visibility="visible"
    />

</merge>
